# SmartCity

./: .gitignore  Coursework.MD  LICENSE
Algorithms/: .gitignore  main.py  pyproject.toml
Algorithms/models/base/: yolo.py
Algorithms/models/detector/: __init__.py  yolo_text_det.py
Algorithms/models/recognizer/: __init__.py  yolo_rec.py
Algorithms/scripts/: train_yolo.py
Middleware/: .gitignore  README.md  main.py  pyproject.toml
Middleware/Datasets/Atest/: manifest.toml
Middleware/Datasets/Atest/test/attributes/: 0266.json  0267.json  0268.json  0269.json  0270.json  0271.json  0272.json  0273.json  0274.json
Middleware/Datasets/Atest/train/attributes/: 0253.json  0255.json  0256.json  0257.json  0258.json  0259.json  0260.json  0261.json  0262.json  0263.json  0264.json  0265.json
Middleware/Datasets/Atest/valid/attributes/: 0275.json  0276.json  0277.json  0278.json  0279.json
Middleware/src/models/base/: yolo.py
Middleware/src/models/detector/: __init__.py  yolo_car.py  yolo_plate.py  yolo_text.py
Middleware/src/pipeline/: __init__.py  car.py  plate_text.py
PipelineTrainer/: .gitignore  main.py  pyproject.toml
PipelineTrainer/src/: __init__.py
PipelineTrainer/src/modules/: __init__.py  car_detector.py
SMCityMiddleware/: main.py  ruff.toml
SMCityMiddleware/src/: __init__.py
SmartCity/: NeoSmart.uproject
SmartCity/Config/: DefaultEngine.ini  DefaultGame.ini
SmartCity/Content/: Itog.ini  Itog2_HLODLayer_Instanced.uasset  Itog2_HLODLayer_Merged.uasset  Itog_HLODLayer_Instanced.uasset  Itog_HLODLayer_Merged.uasset  Itog_WP.umap  (+2 more)
(+7561 files in other folders)
